--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -545,3 +545,27 @@ ul.breadcrumbs {
   font-size: 1rem;
   color: black;
 }
+
+.navbar__brand img {
+  height: 100px; /* Increase this value to make the logo taller */
+  width: auto; /* Maintain the aspect ratio */
+  display: block; /* Ensure proper rendering */
+  margin-top: -27.5px;
+}
+
+.navbar__brand {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar {
+  background-color: var(--ifm-navbar-background-color); /* Adjust background if necessary */
+}
+
+@font-face {
+  font-family: 'Bristol';
+  src: url('../fonts/Bristol.otf') format('opentype'); /* OTF = OpenType Font */
+  font-weight: normal; /* Adjust if you have different weights */
+  font-style: normal; /* Adjust if you have italic versions */
+}
